# hanzilib

./: .gitignore  README  README.md  ez_setup.py  pyproject.toml  test_2.py  test_3.py  test_build.py  teststroke.py
hanzilib/: __init__.py  characterlookup.py  cjknife.py  cli.py  dbconnector.py  exception.py  hanzi-cli.py  log.py  util.py  util.py.bak
hanzilib/dictionary/: __init__.py  __init__.py.bak  entry.py  format.py  install.py  install.py.bak  search.py  search.py.bak
hanzilib/reading/: __init__.py  converter.py  operator.py  types.py
hanzilib/test/: dictionary.py  readingoperator.py
historical/: README.md
scripts/: augmentreadingmapping.py  checkcjkradicals.py  checkhanradicalfolding.py  convertdecomposition.py  convertdecomposition.py.bak  initialfinalmapping.py  localespecificdecomposition.py  localespecificdecomposition.py.bak
